Fixed top nav causing a horizontal scrollbar

--- a/wp-content/themes/row/style.css
+++ b/wp-content/themes/row/style.css
@@ -1202,7 +1202,7 @@ ul#selectUl li.unselected:hover {
 .topnav {
 	position: relative;
 	position: absolute;
-	right: 0;
+	right: 2px;
 	padding: 0;
 	top: 32px;
 	width: 26.6%;
